# mcp-servers

./: README.md
Study Buddy-MCP/: .env  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  TESTING.md  claude_desktop_config.json  modal_deploy.py  pyproject.toml  setup.sh  studybuddy_gradio.py  studybuddy_mcp_server.py  studybuddy_requirements.txt
Study Buddy-MCP/data/: studybuddy.db
Study Buddy-MCP/gradio_app/: app_dark.py
Study Buddy-MCP/mcp_server/: __init__.py  database.py  gemini_client.py  openai_client.py  prompts.py  prompts_backup.py  server.py
TrainBot-Gradio/: .env  README.md  app.py  requirements.txt  trainbot_tools.py
TrainBot-MCP/: .env  README.md  TRAINBOT_README.md  pyproject.toml  requirements.txt  trainbot_server.py
TrainBot-MCP/Development/: app.py  app_HF_gradio.py  app_bkup.py  app_bkup_1.py  course_generator.py  document_processor.py  test_gemini_apikey.py  trainbot_fix_log.md  voice_processor.py
TrainBot-MCP/Development/Archive/: app.py  app_works_HF.py
TrainBot-MCP/Setup/: GETTING_STARTED.md  IMMEDIATE_SETUP.md  VOICE_SETUP_GUIDE.md  env_template.txt  requirements.txt  requirements_bkup.txt
TrainBot-MCP/Test data/: DataScience_Introduction.pptx  Python_for_DataScience.docx  Sample Audio.html  Sample DS.html  TESTING_CHECKLIST.md
TrainBot-MCP/Testing & Deployment/: MODAL_DEPLOYMENT_GUIDE.md  PRODUCTION_IMPROVEMENTS.md
graph-studio-mcp/: simple_test.py  test_mcp.py
